Codebase cleanup: silent failures, UI-thread blocking, leaks and dead code (#98)
- Failed saves (e.g. a duplicate chip) are no longer reported as success; DAO errors propagate.
- One sync at a time; failures logged with their cause.
- Screens release their listeners and background work when replaced (PortalController.openScreen, ScreenTasks).
- Vaccine deletion and CSV export no longer block the JavaFX thread; barcode decoding is bounded.
- Startup fails fast and visibly: HTTP timeouts, transactional province import, honest splash errors.
- Statistics no longer shift years by the timezone.
- Shared form logic, dead code and unused JavaFX modules removed, stale docs refreshed.

Closes #97